--- a/src/app/components/landing-join/landing-join.component.css
+++ b/src/app/components/landing-join/landing-join.component.css
@@ -63,4 +63,9 @@
   width: 2.5rem;
   height: 2.5rem;
   background-color: white;
+
+}
+
+.discord-button:hover .discord-svg {
+  background-color: #7289DA;
 }
