fix signUp Modal

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -75,7 +75,10 @@
             </label>
             <input type="text" placeholder="Type here" class="input input-bordered w-full"/>
           </div>
-          <button class="btn w-full mt-5 " (click)="signUp()">Continuar</button>
+          <form>
+            <button class="btn w-full mt-5 " (click)="signUp()">Continuar</button>
+          </form>
+
         </div>
       </div>
       <form method="dialog" class="absolute z-50 right-4 top-[16px]">
