lazyload on images

--- a/src/app/components/creator-card/creator-card.component.html
+++ b/src/app/components/creator-card/creator-card.component.html
@@ -31,14 +31,14 @@
 <!--</div>-->
 
 <div class="flex justify-center  relative max-w-7xl ">
-  <img src="/assets/images/content-creator/{{bgImage}}" alt="creatorImage" class="w-1/2 hidden   md:inline ">
+  <img src="/assets/images/content-creator/{{bgImage}}" alt="creatorImage" loading="lazy" class="w-1/2 hidden   md:inline ">
   <div class="flex flex-col items-center md:w-1/2  ">
     <div class="flex w-full justify-center items-center gap-x-10  ">
-      <img src="/assets/images/content-creator/{{logo}}" class="rounded-full w-[5rem]  " alt="creatorLogo"/>
+      <img src="/assets/images/content-creator/{{logo}}" loading="lazy" class="rounded-full w-[5rem]  " alt="creatorLogo"/>
       <p class="text-center text-[2rem] font-medium ">{{name}}</p>
     </div>
     <div class="flex w-full h-full justify-center gap-5 ">
-      <img src="/assets/images/content-creator/{{bgImage}}" alt="creatorImage" class="w-1/2 md:hidden   ">
+      <img src="/assets/images/content-creator/{{bgImage}}"  loading="lazy" alt="creatorImage" class="w-1/2 md:hidden   ">
       <div class="w-1/2 md:w-full self-center mx-5 md:mx-10 text-center max-w-md   max-h-40 md:max-h-80 overflow-auto">{{description}}</div>
 
       <div class="flex gap-3 py-3 xxs:gap-10 sm:gap-x-20 absolute bottom-0">
