--- a/src/app/components/landing-join/landing-join.component.html
+++ b/src/app/components/landing-join/landing-join.component.html
@@ -1,8 +1,8 @@
 <div class="w-full flex flex-col items-center gap-16 xxs:gap-20 xs:gap-40 sm:gap-40 2xl:gap-20 relative " appObserveVisibility [stopObserving]="false"  (visible)="activateNavigation('Clan')" >
   <video #myVideo class="absolute w-full m-auto h-[85%] top-0 left-0 object-cover -z-10" autoplay loop muted playsinline src="assets/videos/video.mp4"></video>
-  <img src="../../../assets/images/landing-join/background.webp" class="absolute w-full m-auto h-[85%] top-0 left-0 object-cover -z-10">
+  <img src="../../../assets/images/landing-join/background.webp" loading="lazy" class="absolute w-full m-auto h-[85%] top-0 left-0 object-cover -z-10">
   <div class="absolute w-full h-[85%] -z-10  bg-gradient-to-t from-black to-30%" ></div>
-  <img src="/assets/images/logo_sin_borde.png" alt="Logo" class="xxxs:w-60 xs:w-80 sm:w-[30rem] w-80 "/>
+  <img src="/assets/images/logo_sin_borde.png" alt="Logo" loading="lazy" class="xxxs:w-60 xs:w-80 sm:w-[30rem] w-80 "/>
   <div class="flex flex-col items-center gap-10">
     <p class="font-capital-daren text-shadow text-5xl xs:text-[4.2rem] sm:text-[4.5rem] md:text-[5rem] md:text-7xl lg:text-8xl xl:text-9xl text-center"  >LA AVENTURA TE ESPERA</p>
 
