fix main image lazy load + cache on images

--- a/src/app/components/landing-join/landing-join.component.html
+++ b/src/app/components/landing-join/landing-join.component.html
@@ -1,22 +1,22 @@
 <div class="w-full flex flex-col items-center relative " appObserveVisibility [stopObserving]="false"  (visible)="activateNavigation('Clan')" >
-  <img src="../../../assets/images/landing-join/background.webp" alt="landing-join Background" loading="lazy" class="absolute w-full m-auto h-[85%] top-0 left-0 object-cover -z-10">
+  <img src="../../../assets/images/landing-join/background.webp?v=1.0" alt="landing-join Background" class="absolute w-full m-auto h-[85%] top-0 left-0 object-cover -z-10">
   <div class="absolute w-full h-[85%] -z-10  bg-gradient-to-t from-black to-30%" ></div>
-  <img src="/assets/images/landing-join/logo_sin_borde.webp" alt="Logo" loading="lazy" class="xxxs:w-60 xs:w-80 sm:w-[30rem] w-80 "/>
+  <img src="/assets/images/landing-join/logo_sin_borde.webp?v=1.0" alt="Logo" loading="lazy" class="xxxs:w-60 xs:w-80 sm:w-[30rem] w-80 "/>
   <div class="flex flex-col items-center gap-10">
     <p class="font-capital-daren text-shadow text-5xl xs:text-[4.2rem] sm:text-[4.5rem] md:text-[5rem] md:text-7xl lg:text-8xl xl:text-9xl text-center"  >LA AVENTURA TE ESPERA</p>
 
     <a href="https://discord.com/invite/ADgezdG" target="_blank" class="btn gap-5 font-normal discord-button md:btn-lg text-black hover:bg-white ring-2 ring-white rounded-2xl text-[2rem] xxs:text-[2rem] xs:px-[1.5rem] sm:text-[2.2rem] md:text-[2.5rem] font-capital-daren">
-      <app-svg-icon class="discord-svg" path="assets/images/discord.svg"></app-svg-icon>
+      <app-svg-icon class="discord-svg" path="assets/images/discord.svg?v=1.0"></app-svg-icon>
       <span class="font-capital-daren">Únete a AlFilo</span>
     </a>
 
     <div class="flex flex-wrap gap-5 justify-center px-5 pb-20">
-      <app-basic-card class="flex w-full lg:max-w-xl xl:max-w-xl h-[18rem] xs:h-[15rem] sm:h-72" srcImage="landing-join/info/info_alfilo.webp" title="AL FILO"
+      <app-basic-card class="flex w-full lg:max-w-xl xl:max-w-xl h-[18rem] xs:h-[15rem] sm:h-72" srcImage="landing-join/info/info_alfilo.webp?v=1.0" title="AL FILO"
                       body='Comunidad para disfrutar Star Citizen en compañia, con un ritmo sano.'></app-basic-card>
-      <app-basic-card class="flex w-full lg:max-w-xl xl:max-w-xl h-[18rem] xs:h-[15rem] sm:h-72" srcImage="landing-join/info/info_style.webp"
+      <app-basic-card class="flex w-full lg:max-w-xl xl:max-w-xl h-[18rem] xs:h-[15rem] sm:h-72" srcImage="landing-join/info/info_style.webp?v=1.0"
                       title="Hazte Miembro"
                       body="Juega con nosotros. Somos Pro-Billete, cumplimos los contratos. Realizamos todo tipo de actividades, un ataque a terceros debe tener un motivo económico."></app-basic-card>
-      <app-basic-card class="flex w-full lg:max-w-xl xl:max-w-xl h-[18rem] xs:h-[15rem] sm:h-72" srcImage="landing-join/info/info_join.webp" title="Hazte Daga"
+      <app-basic-card class="flex w-full lg:max-w-xl xl:max-w-xl h-[18rem] xs:h-[15rem] sm:h-72" srcImage="landing-join/info/info_join.webp?v=1.0" title="Hazte Daga"
                       body="Solicita tu rango de DAGA. Obtendrás acceso a Licencias, votaciones y creación de eventos."></app-basic-card>
     </div>
   </div>
