--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,9 +1,9 @@
 <div class="navbar bg-black sticky h-10 top-0 z-50">
   <div class="navbar-start h-full lg:pl-[2rem] 2xl:pl-[10rem]">
-    <img src="../../../assets/images/nav-bar/logo_icono_texto.webp" alt="AlFilo Logo" loading="lazy" class="h-full hidden lg:block">
+    <img src="../../../assets/images/nav-bar/logo_icono_texto.webp?v=1.0" alt="AlFilo Logo" loading="lazy" class="h-full hidden lg:block">
   </div>
   <div class="navbar-center h-full">
-    <img src="../../../assets/images/nav-bar/logo_icono_texto.webp" alt="AlFilo Logo" loading="lazy" class="h-full block lg:hidden">
+    <img src="../../../assets/images/nav-bar/logo_icono_texto.webp?v=1.0" alt="AlFilo Logo" loading="lazy" class="h-full block lg:hidden">
   </div>
   <div class="navbar-end">
     <div class="w-5/6 hidden lg:flex justify-center">
