added base w and h to images

--- a/src/app/components/landing-join/landing-join.component.html
+++ b/src/app/components/landing-join/landing-join.component.html
@@ -1,7 +1,7 @@
 <div class="w-full flex flex-col items-center relative " appObserveVisibility [stopObserving]="false"  (visible)="activateNavigation('Clan')" >
   <img src="../../../assets/images/landing-join/background.webp?v=1.0" alt="landing-join Background" class="absolute w-full m-auto h-[85%] top-0 left-0 object-cover -z-10">
   <div class="absolute w-full h-[85%] -z-10  bg-gradient-to-t from-black to-30%" ></div>
-  <img src="/assets/images/landing-join/logo_sin_borde.webp?v=1.0" alt="Logo" loading="lazy" class="xxxs:w-60 xs:w-80 sm:w-[30rem] w-80 "/>
+  <img src="/assets/images/landing-join/logo_sin_borde.webp?v=1.0" alt="Logo" loading="lazy" class="xxxs:w-60 xs:w-80 sm:w-[30rem] w-80 xxxs:h-60 xs:h-80 sm:h-[30rem] h-80 "/>
   <div class="flex flex-col items-center gap-10">
     <p class="font-capital-daren text-shadow text-5xl xs:text-[4.2rem] sm:text-[4.5rem] md:text-[5rem] md:text-7xl lg:text-8xl xl:text-9xl text-center"  >LA AVENTURA TE ESPERA</p>
 
