added activity section

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,5 +1,5 @@
 <app-landing-join id="clan"></app-landing-join>
-<!--<app-landing-activities id="actividades"></app-landing-activities>-->
+<app-landing-activities id="actividades"></app-landing-activities>
 <!--<div class="bg-gradient-to-t from-alfilo-bg-blue to-black -z-30">-->
 <!--  <app-landing-chronology id="cronologia"></app-landing-chronology>-->
 <!--  <app-landing-creators id="creadores"></app-landing-creators>-->
