--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,9 +1,9 @@
 <app-landing-join id="clan"></app-landing-join>
 <app-landing-activities id="actividades"></app-landing-activities>
-<!--<div class="bg-gradient-to-t from-alfilo-bg-blue to-black -z-30">-->
-<!--  <app-landing-chronology id="cronologia"></app-landing-chronology>-->
+<div class="bg-gradient-to-t from-alfilo-bg-blue to-black -z-30">
+  <app-landing-chronology id="cronologia"></app-landing-chronology>
 <!--  <app-landing-creators id="creadores"></app-landing-creators>-->
-<!--</div>-->
+</div>
 <!--<div class="bg-gradient-to-t from-black via-alfilo-bg-blue via-95% to-alfilo-bg-blue -z-30">-->
 <!--  <app-landing-contact-us id="contacto"></app-landing-contact-us>-->
 <!--</div>-->
