--- a/src/styles.css
+++ b/src/styles.css
@@ -45,3 +45,6 @@
 html{
   scroll-behavior: smooth;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
