--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,6 +5,7 @@
         <img src="assets/images/made_by.png" alt="Tailwind-CSS-Avatar-component" loading="lazy" />
       </div>
     </div>
+    <p>TEST DE PRUEBA</p>
     <p>&copy; 2953 Alfilo.org. Star Citizen&reg;, Roberts Space Industries&reg; y Cloud Imperium&reg; son marcas registradas de Cloud Imperium Rights LLC.<br/>Este proyecto es un sitio de fans y no está afiliado a Cloud Imperium Games de ninguna manera.</p>
   </div>
 </footer>
