--- a/src/app/components/landing-activities/landing-activities.component.html
+++ b/src/app/components/landing-activities/landing-activities.component.html
@@ -14,7 +14,7 @@
     md:text-[9rem] md:leading-[9rem] lg:text-[9rem] lg:leading-[11rem] text-center text-shadow"  >actividades</p>
     <div class="flex flex-wrap xxs:flex-nowrap justify-center gap-5 md:gap-16">
       <a href="#contacto" class="btn text-[2rem] xxs:text-[1.3rem] xs:w-[13.2rem] md:w-[19.5rem] md:text-[2.5rem] lg:text-[2.5rem] h-auto py-3 px-8 text-black font-normal font-capital-daren border-1 border-white hover:bg-white">únete al filo</a>
-      <a href="https://discord.com/invite/ADgezdG" target="_blank" class="btn bg-alfilo-blue text-[2rem] xs:w-[13.2rem] md:w-[19.5rem] xxs:text-[1.3rem] md:text-[2.5rem] lg:text-[2.5rem] h-auto py-3 px-8 text-black font-normal font-capital-daren border-1 border-white hover:bg-white">juega star citizen</button>
+      <a href="https://discord.com/invite/ADgezdG" target="_blank" class="btn bg-alfilo-blue text-[2rem] xs:w-[13.2rem] md:w-[19.5rem] xxs:text-[1.3rem] md:text-[2.5rem] lg:text-[2.5rem] h-auto py-3 px-8 text-black font-normal font-capital-daren border-1 border-white hover:bg-white">juega star citizen</a>
     </div>
   </div>
   <div class="activities-container flex mt-[8rem] xs:mt-[12rem] md:mt-[6rem] lg:mt-[0rem] xs:m-0">
